--- a/Notebook/01_Analisis_preliminar.ipynb
+++ b/Notebook/01_Analisis_preliminar.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "8407b90b",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "73133998",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "af4fa184",
    "metadata": {},
    "outputs": [
@@ -100,118 +100,118 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>32992</th>\n",
-       "      <td>7</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>28</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>14</td>\n",
-       "      <td>SERV. AUXILIARES</td>\n",
-       "      <td>666</td>\n",
-       "      <td>SERV. AUX. TERCEROS</td>\n",
-       "      <td>PERIOD. LICENCIA GOOGLE 2023</td>\n",
-       "      <td>385280.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>166378</td>\n",
-       "      <td>1099</td>\n",
-       "      <td>1855</td>\n",
-       "      <td>860</td>\n",
-       "      <td>X0817031ZC</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-1855</td>\n",
-       "      <td>Mercedes_Hernandez</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>42461</th>\n",
-       "      <td>9</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>28</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>14</td>\n",
-       "      <td>SERV. AUXILIARES</td>\n",
-       "      <td>617</td>\n",
-       "      <td>CARGAS SOCIALES</td>\n",
-       "      <td>CSTS MOD POOL SEP.23</td>\n",
-       "      <td>766090.0</td>\n",
-       "      <td>4141</td>\n",
-       "      <td>217043</td>\n",
-       "      <td>2</td>\n",
-       "      <td>-2959</td>\n",
-       "      <td>800</td>\n",
-       "      <td>X3106665ZV</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2959</td>\n",
-       "      <td>Mercedes_Hernandez</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33368</th>\n",
-       "      <td>7</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>28</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>81</td>\n",
-       "      <td>SERV. LOGÍSTICOS</td>\n",
-       "      <td>610</td>\n",
-       "      <td>SUELDOS Y SALARIOS</td>\n",
-       "      <td>PREVISIONES  07/2023</td>\n",
-       "      <td>409770.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>170755</td>\n",
-       "      <td>818</td>\n",
-       "      <td>343463</td>\n",
-       "      <td>943</td>\n",
-       "      <td>X9592455ZX</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-343463</td>\n",
-       "      <td>Mercedes_Hernandez</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11061</th>\n",
-       "      <td>3</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>19</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>81</td>\n",
-       "      <td>SERV. LOGÍSTICOS</td>\n",
-       "      <td>601</td>\n",
-       "      <td>UNIFORMES</td>\n",
-       "      <td>DESC. VEST. 09/22 Y3990738E</td>\n",
-       "      <td>489190.0</td>\n",
-       "      <td>7</td>\n",
-       "      <td>72987</td>\n",
-       "      <td>13</td>\n",
-       "      <td>-476</td>\n",
-       "      <td>860</td>\n",
-       "      <td>X6687191Z6</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>476</td>\n",
-       "      <td>Mercedes_Hernandez</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26341</th>\n",
+       "      <th>29226</th>\n",
        "      <td>6</td>\n",
        "      <td>2023</td>\n",
+       "      <td>28</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>85</td>\n",
+       "      <td>BPO</td>\n",
+       "      <td>617</td>\n",
+       "      <td>CARGAS SOCIALES</td>\n",
+       "      <td>PREVISIONES  06/2023</td>\n",
+       "      <td>100620.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>146737</td>\n",
+       "      <td>9645</td>\n",
+       "      <td>24671</td>\n",
+       "      <td>943</td>\n",
+       "      <td>X9521446ZS</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-24671</td>\n",
+       "      <td>Mercedes_Hernandez</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27015</th>\n",
+       "      <td>6</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>28</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>10</td>\n",
+       "      <td>ARTE Y CULTURA</td>\n",
+       "      <td>665</td>\n",
+       "      <td>SERV. AUX. EMPR. GRUPO</td>\n",
+       "      <td>PERIOD.LICENCIAS PANDA</td>\n",
+       "      <td>766090.0</td>\n",
+       "      <td>4243</td>\n",
+       "      <td>138141</td>\n",
+       "      <td>310</td>\n",
+       "      <td>352</td>\n",
+       "      <td>860</td>\n",
+       "      <td>X0174611ZC</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-352</td>\n",
+       "      <td>Mercedes_Hernandez</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19952</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>35</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>82</td>\n",
+       "      <td>SERV. ESCOLARES</td>\n",
+       "      <td>617</td>\n",
+       "      <td>CARGAS SOCIALES</td>\n",
+       "      <td>AJUSTE 04/2023 T90 SILTRA</td>\n",
+       "      <td>762080.0</td>\n",
+       "      <td>35</td>\n",
+       "      <td>116346</td>\n",
+       "      <td>4924</td>\n",
+       "      <td>3</td>\n",
+       "      <td>477</td>\n",
+       "      <td>X5945053ZS</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-3</td>\n",
+       "      <td>Fernando_Trujillo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27972</th>\n",
+       "      <td>6</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>28</td>\n",
        "      <td>NaN</td>\n",
        "      <td>14</td>\n",
        "      <td>SERV. AUXILIARES</td>\n",
        "      <td>617</td>\n",
        "      <td>CARGAS SOCIALES</td>\n",
        "      <td>AJUSTE 05/2023 T90 SILTRA</td>\n",
-       "      <td>994300.0</td>\n",
-       "      <td>9914</td>\n",
-       "      <td>32279</td>\n",
-       "      <td>574</td>\n",
-       "      <td>456</td>\n",
-       "      <td>100</td>\n",
-       "      <td>X3280680ZX</td>\n",
+       "      <td>269930.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>139998</td>\n",
+       "      <td>718</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>477</td>\n",
+       "      <td>X8433664ZS</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
-       "      <td>-456</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Mercedes_Hernandez</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43275</th>\n",
+       "      <td>9</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>28</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>66</td>\n",
+       "      <td>FACILITY S.AUXIL</td>\n",
+       "      <td>617</td>\n",
+       "      <td>CARGAS SOCIALES</td>\n",
+       "      <td>AJUSTE 08/2023 T90 SILTRA</td>\n",
+       "      <td>408430.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>204747</td>\n",
+       "      <td>27011</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>477</td>\n",
+       "      <td>X2942583ZS</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>Mercedes_Hernandez</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -220,39 +220,39 @@
       ],
       "text/plain": [
        "       SITUACION MES  SITUACION AÑO  Estrato  Descripción Provinc  \\\n",
-       "32992              7           2023       28                  NaN   \n",
-       "42461              9           2023       28                  NaN   \n",
-       "33368              7           2023       28                  NaN   \n",
-       "11061              3           2023       19                  NaN   \n",
-       "26341              6           2023       10                  NaN   \n",
+       "29226              6           2023       28                  NaN   \n",
+       "27015              6           2023       28                  NaN   \n",
+       "19952              5           2023       35                  NaN   \n",
+       "27972              6           2023       28                  NaN   \n",
+       "43275              9           2023       28                  NaN   \n",
        "\n",
-       "       Linea Venta Descripción Linea V  Subcuenta  Descripción Subcuen  \\\n",
-       "32992           14    SERV. AUXILIARES        666  SERV. AUX. TERCEROS   \n",
-       "42461           14    SERV. AUXILIARES        617      CARGAS SOCIALES   \n",
-       "33368           81    SERV. LOGÍSTICOS        610   SUELDOS Y SALARIOS   \n",
-       "11061           81    SERV. LOGÍSTICOS        601            UNIFORMES   \n",
-       "26341           14    SERV. AUXILIARES        617      CARGAS SOCIALES   \n",
+       "       Linea Venta Descripción Linea V  Subcuenta     Descripción Subcuen  \\\n",
+       "29226           85                 BPO        617         CARGAS SOCIALES   \n",
+       "27015           10      ARTE Y CULTURA        665  SERV. AUX. EMPR. GRUPO   \n",
+       "19952           82     SERV. ESCOLARES        617         CARGAS SOCIALES   \n",
+       "27972           14    SERV. AUXILIARES        617         CARGAS SOCIALES   \n",
+       "43275           66    FACILITY S.AUXIL        617         CARGAS SOCIALES   \n",
        "\n",
-       "                           Concepto   Cliente  Cont/Proy  Asiento  Línea  \\\n",
-       "32992  PERIOD. LICENCIA GOOGLE 2023  385280.0          4   166378   1099   \n",
-       "42461          CSTS MOD POOL SEP.23  766090.0       4141   217043      2   \n",
-       "33368          PREVISIONES  07/2023  409770.0          1   170755    818   \n",
-       "11061   DESC. VEST. 09/22 Y3990738E  489190.0          7    72987     13   \n",
-       "26341     AJUSTE 05/2023 T90 SILTRA  994300.0       9914    32279    574   \n",
+       "                        Concepto   Cliente  Cont/Proy  Asiento  Línea  \\\n",
+       "29226       PREVISIONES  06/2023  100620.0          1   146737   9645   \n",
+       "27015     PERIOD.LICENCIAS PANDA  766090.0       4243   138141    310   \n",
+       "19952  AJUSTE 04/2023 T90 SILTRA  762080.0         35   116346   4924   \n",
+       "27972  AJUSTE 05/2023 T90 SILTRA  269930.0          1   139998    718   \n",
+       "43275  AJUSTE 08/2023 T90 SILTRA  408430.0          3   204747  27011   \n",
        "\n",
        "       Importe  Opción      Perfíl  I/C  Provincia  Resultado  \\\n",
-       "32992     1855     860  X0817031ZC    3          0      -1855   \n",
-       "42461    -2959     800  X3106665ZV    3          0       2959   \n",
-       "33368   343463     943  X9592455ZX    3          0    -343463   \n",
-       "11061     -476     860  X6687191Z6    3          0        476   \n",
-       "26341      456     100  X3280680ZX    3          0       -456   \n",
+       "29226    24671     943  X9521446ZS    3          0     -24671   \n",
+       "27015      352     860  X0174611ZC    3          0       -352   \n",
+       "19952        3     477  X5945053ZS    3          0         -3   \n",
+       "27972       -1     477  X8433664ZS    3          0          1   \n",
+       "43275       -1     477  X2942583ZS    3          0          1   \n",
        "\n",
        "              Responsable  \n",
-       "32992  Mercedes_Hernandez  \n",
-       "42461  Mercedes_Hernandez  \n",
-       "33368  Mercedes_Hernandez  \n",
-       "11061  Mercedes_Hernandez  \n",
-       "26341  Mercedes_Hernandez  "
+       "29226  Mercedes_Hernandez  \n",
+       "27015  Mercedes_Hernandez  \n",
+       "19952   Fernando_Trujillo  \n",
+       "27972  Mercedes_Hernandez  \n",
+       "43275  Mercedes_Hernandez  "
       ]
      },
      "metadata": {},
@@ -455,14 +455,14 @@
    "id": "87f554ff",
    "metadata": {},
    "source": [
-    "## Observaciones\n",
-    "- SITUACION AÑO: Podemos borrarla porque hemos creado la columna FECHA en formato datatime\n",
+    "## Observaciones para la limpieza\n",
+    "- SITUACION AÑO: Podemos borrarla porque crearemos la columna FECHA en formato datatime\n",
     "- SITUACION MES: Ocurre lo mismo que la columna anterior, podemos eliminarla\n",
     "- Estrato: Es el código postal, la trataría como colunmna categórica.\n",
-    "- Descripcion provincia: Tiene el 100% de nulos, pero sería una columna categórica con el nombre de la provincia según su CP\n",
+    "- Descripcion provincia: Tiene el 100% de nulos, eliminar, ya que esta descrito en el estrato\n",
     "- Linea de venta: indentificador de la lineas de producción. Cambiarla a categórica\n",
-    "- Subcuenta: es el código que se le dá a las cuentas contable, cambiaría a categórica\n",
-    "- Cliente: Identificador del cliente, cambiaría a categórica\n",
+    "- Subcuenta: es el código que se le dá a las cuentas contable, cambiaría a categórica. Tien 5% nulos\n",
+    "- Cliente: Identificador del cliente, cambiaría a categórica. Tiene 1,72% de nulos\n",
     "- Contrato/proyecto: Identificador del contrato/poryecto, cambiaría a categórica\n",
     "- Asiento: número de apunte contable, sin relevancia\n",
     "- Linea: números de linea introducidas.\n",
@@ -471,37 +471,6 @@
     "- I/C: Indica que es ingreso 7 y que coste 3. Se podría pasar a categórica\n",
     "- Provincia: Está todo en 0, podríamos eliminarla\n",
     "- Resultado: importes de cada apunte contable"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c13f55d3",
-   "metadata": {},
-   "source": [
-    "Tenemos pocas columnas con pocos nulos:\n",
-    "- Descripción Provincia: Hay el 100% de nulos, no hay información de la descripcion de la provicia, aunque el estrato da el CP de la misma y podríamos sacarlo de ahí.\n",
-    "- Descripcion subcuenta: tiene un 5% de nulos, también tiene una columna con la subcuenta en número.\n",
-    "- Cliente: Tiene un 1,72% de nulos, un porcentaje bajo"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "d22fd024",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df.drop(columns=['SITUACION MES', 'SITUACION AÑO', 'Descripción Provinc', 'Provincia'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "1fc46b97",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "columnas_num = df.select_dtypes(include='number').columns"
    ]
   },
   {
