Gestión de nulos

--- a/Notebook/02_Limpieza.ipynb
+++ b/Notebook/02_Limpieza.ipynb
@@ -401,6 +401,16 @@
    "source": [
     "df.columns"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "dd297ba6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_excel('../data/data_limpios.xlsx', index=False)"
+   ]
   }
  ],
  "metadata": {
