Gestion de nulos

--- a/Notebook/02_Limpieza.ipynb
+++ b/Notebook/02_Limpieza.ipynb
@@ -404,6 +404,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "id": "738a4c95",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 60302 entries, 0 to 60301\n",
+      "Data columns (total 14 columns):\n",
+      " #   Column               Non-Null Count  Dtype         \n",
+      "---  ------               --------------  -----         \n",
+      " 0   estrato              60302 non-null  category      \n",
+      " 1   linea_venta          60302 non-null  category      \n",
+      " 2   descripción_linea_v  60302 non-null  object        \n",
+      " 3   subcuenta            60302 non-null  category      \n",
+      " 4   descripción_subcuen  57287 non-null  object        \n",
+      " 5   concepto             60302 non-null  object        \n",
+      " 6   cliente              59262 non-null  category      \n",
+      " 7   cont/proy            60302 non-null  category      \n",
+      " 8   línea                60302 non-null  category      \n",
+      " 9   importe              60302 non-null  int64         \n",
+      " 10  i/c                  60302 non-null  category      \n",
+      " 11  resultado            60302 non-null  int64         \n",
+      " 12  responsable          60302 non-null  object        \n",
+      " 13  Fecha                60302 non-null  datetime64[ns]\n",
+      "dtypes: category(7), datetime64[ns](1), int64(2), object(4)\n",
+      "memory usage: 4.5+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "id": "dd297ba6",
    "metadata": {},
