--- a/Notebook/03_Gestion_nulos.ipynb
+++ b/Notebook/03_Gestion_nulos.ipynb
@@ -487,6 +487,16 @@
    "source": [
     "df['descripción_subcuen'] = df['descripción_subcuen'].fillna('sin_descripción')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "39f062f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_excel('../data/data_nonulos.xlsx', index=False)"
+   ]
   }
  ],
  "metadata": {
